@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.9 2004/04/20 20:09:03 minskim Exp $
+# $NetBSD: Makefile,v 1.10 2004/04/20 20:22:51 minskim Exp $
 
-DISTNAME=	XML-XSLT-0.32
+DISTNAME=	XML-XSLT-0.48
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 SVR4_PKGNAME=	p5xxs
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
 
 MAINTAINER=	tech-pkg@NetBSD.org
+HOMEPAGE=	http://search.cpan.org/~jstowe/XML-XSLT-0.48/
 COMMENT=	Perl5 module for processing XSLT
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
@@ -17,6 +17,7 @@ DEPENDS+=	p5-XML-Parser>=2.23:../../textproc/p5-XML-Parser
 DEPENDS+=	p5-libwww-[0-9]*:../../www/p5-libwww
 
 USE_BUILDLINK3=		YES
+USE_LANGUAGES=		# empty
 PERL5_PACKLIST=		${PERL5_SITEARCH}/auto/XML/XSLT/.packlist
 
 .include "../../lang/perl5/module.mk"
