@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2002/01/10 14:20:11 wiz Exp $
+$NetBSD: distinfo,v 1.3 2004/04/20 20:22:51 minskim Exp $
 
-SHA1 (XML-XSLT-0.32.tar.gz) = 4c754c5432875b013db9267b75d7a582932ebb53
-Size (XML-XSLT-0.32.tar.gz) = 236772 bytes
+SHA1 (XML-XSLT-0.48.tar.gz) = 10beeeaa1da815f6ed202c0824249916f2b2c36d
+Size (XML-XSLT-0.48.tar.gz) = 263458 bytes
